@@ -54,7 +54,6 @@ AC_SEARCH_LIBS([pow], [m])
 KPSE_KPATHSEA_FLAGS
 KPSE_ZLIB_FLAGS
 KPSE_LIBPNG_FLAGS
-KPSE_FREETYPE2_FLAGS
 KPSE_LIBPAPER_FLAGS
 AC_DEFINE([HAVE_LIBPAPER], [1], [Define if you have libpaper.])
 
